--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <header>
         <div class="logo">
-          <a href="#"><img src="img/logo.png" alt="logo" /></a>
+          <a href="#"><img src="logo.png" alt="logo" /></a>
         </div>
 
         <div class="navbar">
@@ -43,21 +43,21 @@
         </p>
         <input type="button" value="get started!" id="title-btn" />
       </div>
-      <img src="img/dish.png" alt="" />
+      <img src="dish.png" alt="" />
     </main>
     <section class="about">
       <div class="card">
-        <img src="img/icons8-recipe-book-100.png" alt="" />
+        <img src="icons8-recipe-book-100.png" alt="" />
         <h3>million of recipe</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
       </div>
       <div class="card">
-        <img src="img/icons8-newspaper-100.png" alt="" />
+        <img src="icons8-newspaper-100.png" alt="" />
         <h3>oct insight</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
       </div>
       <div class="card">
-        <img src="img/icons8-sociology-100.png" alt="" />
+        <img src="icons8-sociology-100.png" alt="" />
         <h3>oct sociology</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
       </div>
@@ -65,17 +65,17 @@
     <section class="sec3">
       <div class="menu">
         <div class="card card1">
-          <img src="img/chin.jpg" alt="" />
+          <img src=chin.jpg" alt="" />
           <h3>chinese foods</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="card">
-          <img src="img/indian.jpg" alt="" />
+          <img src="indian.jpg" alt="" />
           <h3>indian foods</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div class="card">
-          <img src="img/fas.jpg" alt="" />
+          <img src="fas.jpg" alt="" />
           <h3>fast food</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
