--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section class="sec3">
       <div class="menu">
         <div class="card card1">
-          <img src="chin.jpg" alt="" />
+          <img src="chin.jppg" alt="" />
           <h3>chinese foods</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
